--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
+@import "@danielmoncada/angular-datetime-picker/assets/style/picker.min.css";
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
